added node-edge distances in annealing; enabled fine-tuning

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,33 +28,46 @@
     "    G.add_nodes_from(range(n))\n",
     "    for _ in range(m):\n",
     "        u, v = map(int, f.readline().strip().split())\n",
-    "        G.add_edge(u, v)"
+    "        G.add_edge(u, v)\n",
+    "W, H = 100, 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W, H = 100, 100\n",
     "layouts = [{i: (randint(0, W), randint(0, H)) for i in G} for _ in range(1)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('start.txt', 'r') as f:\n",
+    "    last = None\n",
+    "    for line in f:\n",
+    "        last = line\n",
+    "    layouts = [{i : tuple(map(float, x.split())) for i, x in enumerate(last.split(';')[:len(G)])}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41dd6a026ce54c7ca26ecda3722707c6",
+       "model_id": "31077f25e6e34cdaafb560f0671ebaa4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatLogSlider(value=1.0, description='Nodes', max=3.0)"
+       "FloatLogSlider(value=1000.0, description='Nodes', max=3.0)"
       ]
      },
      "metadata": {},
@@ -63,12 +76,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f51f6543081649a9bf63638c81da66e2",
+       "model_id": "cb257cb0246f4f118971c387d202edac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatLogSlider(value=1.0, description='Border', max=3.0)"
+       "FloatLogSlider(value=1000.0, description='Border', max=3.0)"
       ]
      },
      "metadata": {},
@@ -77,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1354d99cf35d4cd98a1d3da199fd253e",
+       "model_id": "f4c4e84968784d29bf0e99c0b2ac48ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,12 +104,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39cb5df66ed14088ae6d3ecc912fb85c",
+       "model_id": "73845a867ede4735b1b574669594996e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatLogSlider(value=1.0, description='Crossings')"
+       "FloatLogSlider(value=300.0, description='Crossings')"
       ]
      },
      "metadata": {},
@@ -105,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6cb9059c59a4b9f8384934feec8131f",
+       "model_id": "dfdd670539a646ea8f20ec1e00e2d8b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,12 +132,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b480142426dd471e9d7c6c8bdbce0e7a",
+       "model_id": "c66a9c9bfa914c2a97c120a5c7696fb8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Text(value='0.90', description='Cooling')"
+       "Text(value='0.9985', description='Cooling')"
       ]
      },
      "metadata": {},
@@ -133,12 +146,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52cb199f485c4a5b90c8289feae191d4",
+       "model_id": "70fe31290dfe4748a66f01d6bada861a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntSlider(value=1000, description='Iterations', max=10000, min=1)"
+       "IntSlider(value=10000, description='Iterations', max=10000, min=1)"
       ]
      },
      "metadata": {},
@@ -147,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "615c059ee0654c65a0bd129eecce35eb",
+       "model_id": "1d8ae15e7b13445b9d4408b57cabd615",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,7 +174,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "008ba5a599424a989d844ca12e623c76",
+       "model_id": "5a83aee93caa4a7f87295ecc66aef726",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Launch fine tuning', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "808167bf06bc4c0a83191aa3c100ceb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,31 +203,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added 10002 new layouts, now history contains 10003 layouts\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-131-52cd5e76df9d>\u001b[0m in \u001b[0;36mlaunch_annealing\u001b[0;34m(button)\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'start.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"%s %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlayouts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     new_info = subprocess.run([\n\u001b[1;32m     19\u001b[0m         \u001b[0;34m\"./main\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-131-52cd5e76df9d>\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'start.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"%s %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlayouts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     new_info = subprocess.run([\n\u001b[1;32m     19\u001b[0m         \u001b[0;34m\"./main\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 0"
+      "History contains 1 layouts\n",
+      "Added 10002 new layouts, now history contains 10002 layouts\n",
+      "Added 10002 new layouts, now history contains 20003 layouts\n",
+      "Added 10002 new layouts, now history contains 30004 layouts\n",
+      "Added 10002 new layouts, now history contains 40005 layouts\n",
+      "Added 10002 new layouts, now history contains 50006 layouts\n",
+      "Added 10002 new layouts, now history contains 60007 layouts\n"
      ]
     }
    ],
    "source": [
-    "nodesW = widgets.FloatLogSlider(description='Nodes', min=0, max=3, value=1)\n",
-    "borderW = widgets.FloatLogSlider(description='Border', min=0, max=3, value=1)\n",
+    "nodesW = widgets.FloatLogSlider(description='Nodes', min=0, max=3, value=1000)\n",
+    "borderW = widgets.FloatLogSlider(description='Border', min=0, max=3, value=1000)\n",
     "edgesW = widgets.FloatLogSlider(description='Edges', min=-3, max=0, value=0.01)\n",
-    "crossW = widgets.FloatLogSlider(description='Crossings')\n",
+    "crossW = widgets.FloatLogSlider(description='Crossings', min=0, max=4, value=300)\n",
     "T = widgets.FloatLogSlider(description='Temperature', min=0, max=5, value=1e4)\n",
-    "cooling = widgets.Text(description='Cooling', value='0.90')\n",
-    "iters = widgets.IntSlider(description='Iterations', min=1, max=10000, value = 1000)\n",
+    "cooling = widgets.Text(description='Cooling', value='0.9985')\n",
+    "iters = widgets.IntSlider(description='Iterations', min=1, max=10000, value=10000)\n",
     "button = widgets.Button(description='Launch annealing')\n",
+    "tune = widgets.Button(description='Launch fine tuning')\n",
     "\n",
     "def launch_annealing(button):\n",
     "    try:\n",
@@ -209,7 +231,7 @@
     "        print('Cooling temperature (%s) is incorrect' % cooling.value)\n",
     "        return\n",
     "    with open('start.txt', 'w') as f:\n",
-    "        f.write('\\n'.join(map(lambda x: \"%s %s\" % (x[0], x[1]), (layouts[-1][i] for i in sorted(list(G.nodes))))))\n",
+    "        f.write(';'.join(map(lambda x: \"%s %s\" % (x[0], x[1]), (layouts[-1][i] for i in sorted(list(G.nodes))))))\n",
     "    new_info = subprocess.run([\n",
     "        \"./main\",\n",
     "        \"--nodes\", str(nodesW.value),\n",
@@ -225,7 +247,36 @@
     "    ], capture_output=True).stdout.decode('utf-8').split('\\n')\n",
     "    for line in new_info:\n",
     "        coords = dict(enumerate(map(lambda x: tuple(map(float, x.split(' '))), line.split(';')[:-4])))\n",
-    "        layouts.append(coords)\n",
+    "        if len(coords) > 0:\n",
+    "            layouts.append(coords)\n",
+    "    print('Added %d new layouts, now history contains %d layouts' % (len(new_info), len(layouts)))\n",
+    "    \n",
+    "def fine_tune(button):\n",
+    "    try:\n",
+    "        float(cooling.value)\n",
+    "    except:\n",
+    "        print('Cooling temperature (%s) is incorrect' % cooling.value)\n",
+    "        return\n",
+    "    with open('start.txt', 'w') as f:\n",
+    "        f.write(';'.join(map(lambda x: \"%s %s\" % (x[0], x[1]), (layouts[-1][i] for i in sorted(list(G.nodes))))))\n",
+    "    new_info = subprocess.run([\n",
+    "        \"./main\",\n",
+    "        \"--nodes\", str(nodesW.value),\n",
+    "        \"--edges\", str(edgesW.value),\n",
+    "        \"--border\", str(borderW.value),\n",
+    "        \"--cross\", str(crossW.value),\n",
+    "        \"--startT\", str(T.value),\n",
+    "        \"--cooling\", str(cooling.value),\n",
+    "        \"--rounds\", str(iters.value),\n",
+    "        \"--width\", str(W),\n",
+    "        \"--height\", str(H),\n",
+    "        \"--fine-tune\",\n",
+    "        \"--starting-layout\", \"start.txt\"\n",
+    "    ], capture_output=True).stdout.decode('utf-8').split('\\n')\n",
+    "    for line in new_info:\n",
+    "        coords = dict(enumerate(map(lambda x: tuple(map(float, x.split(' '))), line.split(';')[:-4])))\n",
+    "        if len(coords) > 0:\n",
+    "            layouts.append(coords)\n",
     "    print('Added %d new layouts, now history contains %d layouts' % (len(new_info), len(layouts)))\n",
     "\n",
     "def do_reset(button):\n",
@@ -242,26 +293,29 @@
     "display(cooling)\n",
     "display(iters)\n",
     "display(button)\n",
+    "display(tune)\n",
     "button.on_click(launch_annealing)\n",
+    "tune.on_click(fine_tune)\n",
     "reset = widgets.Button(description='Reset')\n",
     "display(reset)\n",
-    "reset.on_click(do_reset)"
+    "reset.on_click(do_reset)\n",
+    "print('History contains %d layouts' % len(layouts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9191edebd3b4386ad542c2a35e130b8",
+       "model_id": "38e5a72488fe48b3a16c33b423264ffb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='t', max=10002), Output()), _dom_classes=('widget-interac…"
+       "interactive(children=(IntSlider(value=0, description='t', max=60006), Output()), _dom_classes=('widget-interac…"
       ]
      },
      "metadata": {},
